fixed searchbar visibility

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,11 +9,18 @@
   margin-top: 0.8em;
   height: 30px;
   width: 80px;
+  margin-bottom: 1em;
+}
+.outer {
+  background-color: white;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  margin-bottom: 1em;
 }
 .wrapper {
   width: 500px;
   margin: auto;
-  margin-bottom: 1em;
 }
 .searchBox {
   width: 80%;
